--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+host: "https://blog.sungkwang.me"
+title: 송성광 기술블로그 
+email: tech@sungkwang.me
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -26,9 +27,17 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
+paginate: 10
+
+
+sass:
+    sass_dir: css
+
+trawler_mode: true
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
