--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-catch-links": "^2.0.4",
     "gatsby-plugin-cname": "^1.0.0",
     "gatsby-plugin-feed": "^2.3.26",
+    "gatsby-plugin-feed-generator": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-google-fonts": "latest",
     "gatsby-plugin-offline": "^2.0.6",
