--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-netlify": "^2.1.31",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-sitemap": "^2.2.26",
+    "gatsby-remark-images-anywhere": "^1.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
